@@ -1,6 +1,8 @@
 dietlibc (0.33~cvs20111108-4) UNRELEASED; urgency=low
 
   * New patch to fix the ssize_t definition, for -Wformat benefit
+  * New testcase to catch a specifically aligned strlen bug, from
+    mtest-ascii1 of the Debian mksh package
 
  -- Thorsten Glaser <tg@mirbsd.de>  Sat, 19 Nov 2011 17:45:51 +0000
 
